# argo

./: .devcontainer.json  .gitignore  CHANGELOG.md  README.md  argo.cabal  brittany.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: brittany.yaml  ci.yaml  hlint.yaml
config/: brittany-problem-matcher.json  hlint-problem-matcher.json  hlint.yaml
source/benchmark/: Main.hs
source/executable/: Main.hs
source/test-suite/: Main.hs
source/test-suite/Argo/: Orphanage.hs
source/tools/: copy-executable.hs
