cabal-version: >= 1.8

name: argo
version: 0.2021.10.9

build-type: Simple
category: JSON
description: Argo parses and renders JSON.
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak
synopsis: Parse and render JSON.

source-repository head
    location: https://github.com/tfausak/argo
    type: git

library
    build-depends: base >= 4.15.0 && < 4.16
    exposed-modules: Argo
    hs-source-dirs: source/library

test-suite argo-test-suite
    build-depends:
        base
        , tasty >= 1.4.2 && < 1.5
        , tasty-hunit >= 0.10.0 && < 0.11
    hs-source-dirs: source/test-suite
    main-is: Main.hs
    type: exitcode-stdio-1.0
